--- a/dolteng/org.seasar.dolteng.projects/plugin.xml
+++ b/dolteng/org.seasar.dolteng.projects/plugin.xml
@@ -124,7 +124,7 @@
 			<entry kind="file" path="${libPath}/ognl-2.6.9-patch-20070624.jar" />
 			<entry kind="file"
 				path="${libPath}/poi-3.0-FINAL.jar" />
-			<entry kind="file" path="${libPath}/h2-2007-08-02.jar" />
+			<entry kind="file" path="${libPath}/h2-2007-10-03.jar" />
 			<entry kind="file"
 				path="${libPath}/s2-extension-2.4.17.jar" />
 			<entry kind="file"
@@ -171,10 +171,10 @@
 		</handler>
 		<handler type="classpath">
 			<entry path="${webAppRoot}/view" />
-			<entry kind="file" path="${libPath}/teeda-ajax-1.0.11-RC1.jar" />
-			<entry kind="file" path="${libPath}/teeda-core-1.0.11-RC1.jar" />
+			<entry kind="file" path="${libPath}/teeda-ajax-1.0.11.jar" />
+			<entry kind="file" path="${libPath}/teeda-core-1.0.11.jar" />
 			<entry kind="file"
-				path="${libPath}/teeda-extension-1.0.11-RC1.jar" />
+				path="${libPath}/teeda-extension-1.0.11.jar" />
 			<entry kind="file"
 				path="${libPath}/commons-collections-3.1.jar" />
 			<entry kind="file" path="${libPath}/commons-el-1.0.jar" />
@@ -220,7 +220,7 @@
 		extends="10,500" displayOrder="TO01"
 		resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
 		<handler type="classpath">
-			<entry kind="file" path="${libPath}/teeda-tiger-1.0.11-RC1.jar" />
+			<entry kind="file" path="${libPath}/teeda-tiger-1.0.11.jar" />
 		</handler>
 	</project>
 	<project id="511" name="S2Dao Only" jre="1.5" extends="11,500"
@@ -369,7 +369,7 @@
 			<entry kind="file" path="WEB-INF/lib/ognl-2.6.9-patch-20070624.jar" />
 			<entry kind="file"
 				path="WEB-INF/lib/poi-3.0-FINAL.jar" />
-			<entry kind="file" path="WEB-INF/lib/h2-2007-08-02.jar" />
+			<entry kind="file" path="WEB-INF/lib/h2-2007-10-03.jar" />
 			<entry kind="file"
 				path="WEB-INF/lib/s2-extension-2.4.17.jar" />
 			<entry kind="file"
