とりあえず、ライブラリのバージョンだけ上げる。まだリリースしない。
git-svn-id: https://www.seasar.org/svn/chura/trunk/dolteng/org.seasar.dolteng.eclipse.plugin@712 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/build.properties
+++ b/build.properties
@@ -4,7 +4,8 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                plugin_ja.properties,\
                icons/,\
-               template/
+               template/,\
+               template/jars/h2-2007-10-03.jar
 jars.compile.order = dolteng-core.jar
 source.dolteng-core.jar = target/classes/,\
                           src/main/java/,\
