--- a/dolteng/org.seasar.dolteng.projects/plugin.xml
+++ b/dolteng/org.seasar.dolteng.projects/plugin.xml
@@ -171,10 +171,10 @@
 		</handler>
 		<handler type="classpath">
 			<entry path="${webAppRoot}/view" />
-			<entry kind="file" path="${libPath}/teeda-ajax-1.0.11.jar" />
-			<entry kind="file" path="${libPath}/teeda-core-1.0.11.jar" />
+			<entry kind="file" path="${libPath}/teeda-ajax-1.0.11-SP1.jar" />
+			<entry kind="file" path="${libPath}/teeda-core-1.0.11-SP1.jar" />
 			<entry kind="file"
-				path="${libPath}/teeda-extension-1.0.11.jar" />
+				path="${libPath}/teeda-extension-1.0.11-SP1.jar" />
 			<entry kind="file"
 				path="${libPath}/commons-collections-3.1.jar" />
 			<entry kind="file" path="${libPath}/commons-el-1.0.jar" />
@@ -220,7 +220,7 @@
 		extends="10,500" displayOrder="TO01"
 		resourceLoader="org.seasar.dolteng.eclipse.loader.impl.CompositeResourceLoader">
 		<handler type="classpath">
-			<entry kind="file" path="${libPath}/teeda-tiger-1.0.11.jar" />
+			<entry kind="file" path="${libPath}/teeda-tiger-1.0.11-SP1.jar" />
 		</handler>
 	</project>
 	<project id="511" name="S2Dao Only" jre="1.5" extends="11,500"
