git-svn-id: https://www.seasar.org/svn/chura/trunk@718 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.scaffold/plugin.xml
+++ b/dolteng/org.seasar.dolteng.scaffold/plugin.xml
@@ -172,7 +172,7 @@
 			<template path="template/fm/flex_mxml.ftl"
 				override="true"
 				outputpath="${flexsrcroot}/${rootpackagepath}/${subapplicationrootpackagename}/${table}/"
-				outputname="${table_capitalize}.mxml" />
+				outputname="${table_capitalize}View.mxml" />
 		</templates>
 	</extension>
 
