--- a/dolteng/org.seasar.dolteng.eclipse.plugin/.classpath
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/.classpath
@@ -7,7 +7,7 @@
 	<classpathentry exported="true" kind="lib" path="template/jars/geronimo-jpa_3.0_spec-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="template/jars/aopalliance-1.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="template/jars/log4j-1.2.13.jar"/>
-	<classpathentry exported="true" kind="lib" path="template/jars/ognl-2.6.9-patch-20070624.jar"/>
+	<classpathentry exported="true" kind="lib" path="template/jars/ognl-2.6.9-patch-20070908.jar"/>
 	<classpathentry kind="lib" path="template/jars/fuzzyxml-0.0.9.jar" sourcepath="template/jars/sources/fuzzyxml-0.0.9-sources.zip"/>
 	<classpathentry exported="true" kind="lib" path="template/jars/commons-jxpath-1.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="template/jars/freemarker-2.3.8.jar" sourcepath="/freemarker-2.3.8/src"/>
@@ -17,11 +17,11 @@
 	<classpathentry exported="true" kind="lib" path="template/jars/antlr-20070101.jar"/>
 	<classpathentry exported="true" kind="lib" path="template/jars/stringtemplate-2.3b9.jar"/>
 	<classpathentry kind="lib" path="template/jars/junit-3.8.2.jar"/>
-	<classpathentry kind="lib" path="template/jars/kuina-dao-1.0.0.jar" sourcepath="template/jars/sources/kuina-dao-1.0.0-sources.jar"/>
 	<classpathentry kind="lib" path="template/jars/commons-logging-1.1.jar"/>
-	<classpathentry exported="true" kind="lib" path="template/jars/s2-extension-2.4.17.jar" sourcepath="template/jars/sources/s2-extension-2.4.17-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="template/jars/s2-framework-2.4.17.jar" sourcepath="template/jars/sources/s2-framework-2.4.17-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="template/jars/s2-tiger-2.4.17.jar" sourcepath="template/jars/sources/s2-tiger-2.4.17-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="template/jars/kuina-dao-1.0.1-rc1.jar" sourcepath="template/jars/sources/kuina-dao-1.0.1-rc1-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="template/jars/s2-extension-2.4.18-rc1.jar" sourcepath="template/jars/sources/s2-extension-2.4.18-rc1-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="template/jars/s2-framework-2.4.18-rc1.jar" sourcepath="template/jars/sources/s2-framework-2.4.18-rc1-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="template/jars/s2-tiger-2.4.18-rc1.jar" sourcepath="template/jars/sources/s2-tiger-2.4.18-rc1-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="template/jars/h2-2007-10-03.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
