--- a/dolteng/org.seasar.dolteng.projects/template/520/pom.xml
+++ b/dolteng/org.seasar.dolteng.projects/template/520/pom.xml
@@ -137,32 +137,32 @@
 		<dependency>
 			<groupId>org.seasar.container</groupId>
 			<artifactId>s2-extension</artifactId>
-			<version>2.4.17</version>
+			<version>2.4.18-rc1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.container</groupId>
 			<artifactId>s2-framework</artifactId>
-			<version>2.4.17</version>
+			<version>2.4.18-rc1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.container</groupId>
 			<artifactId>s2-tiger</artifactId>
-			<version>2.4.17</version>
+			<version>2.4.18-rc1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.teeda</groupId>
 			<artifactId>teeda-extension</artifactId>
-			<version>1.0.11-RC1</version>
+			<version>1.0.11-SP1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.teeda</groupId>
 			<artifactId>teeda-ajax</artifactId>
-			<version>1.0.11-RC1</version>
+			<version>1.0.11-SP1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.teeda</groupId>
 			<artifactId>teeda-tiger</artifactId>
-			<version>1.0.11-RC1</version>
+			<version>1.0.11-SP1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.teeda</groupId>
@@ -172,17 +172,17 @@
 		<dependency>
 			<groupId>org.seasar.dao</groupId>
 			<artifactId>s2-dao</artifactId>
-			<version>1.0.43</version>
+			<version>1.0.47-RC1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.seasar.dao</groupId>
 			<artifactId>s2-dao-tiger</artifactId>
-			<version>1.0.43</version>
+			<version>1.0.47-RC1</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>1.0.20070802</version>
+			<version>1.0.59</version>
 		</dependency>
 	</dependencies>
 </project>
