Kuina-Dao の Jar ファイル名を間違えていたので修正．心より恥じる．
git-svn-id: https://www.seasar.org/svn/chura/trunk@730 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.projects/plugin.xml
+++ b/dolteng/org.seasar.dolteng.projects/plugin.xml
@@ -272,7 +272,7 @@
 			<entry kind="file"
 				path="${libPath}/jboss-archive-browsing-5.0.0alpha-200607201-119.jar" />
 			<entry kind="file"
-				path="${libPath}/kuina-dao-1.0.1-sp1.jar" />
+				path="${libPath}/kuina-dao-1.0.1-rc1.jar" />
 			<entry kind="file" path="${libPath}/lucene-core-2.0.0.jar" />
 			<entry kind="file"
 				path="${libPath}/s2hibernate-jpa-1.0.1-rc1.jar" />
