新規Pageクラス作成時に、publicフィールド出力を選択できるようにした。
git-svn-id: https://www.seasar.org/svn/chura/trunk@743 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -92,6 +92,9 @@ WIZARD_PAGE_SEPARATE=Separate Page and Action
 WIZARD_PAGE_SELECT_TYPE=Select type Object ....
 WIZARD_PAGE_CLASS_MAPPING=Class mapping
 WIZARD_PAGE_TABLE_MAPPING=Table mapping
+WIZARD_PAGE_FIELD_TYPE=Select Field Modifier ...
+WIZARD_PAGE_FIELD_PRIVATE=private
+WIZARD_PAGE_FIELD_PUBLIC=public
 WIZARD_BASE_PAGE_DESCRIPTION=Do you want to create base class ?
 WIZARD_BASE_PAGE=Create Or Update Base Class
 WIZARD_PAGE_DTO_FIELD_SELECTION=Edit Dto fields
