--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -92,6 +92,9 @@ WIZARD_PAGE_SEPARATE=Separate Page and Action
 WIZARD_PAGE_SELECT_TYPE=Select type Object ....
 WIZARD_PAGE_CLASS_MAPPING=Class mapping
 WIZARD_PAGE_TABLE_MAPPING=Table mapping
+WIZARD_PAGE_FIELD_TYPE=Select Field Modifier ...
+WIZARD_PAGE_FIELD_PRIVATE=private
+WIZARD_PAGE_FIELD_PUBLIC=public
 WIZARD_BASE_PAGE_DESCRIPTION=Do you want to create base class ?
 WIZARD_BASE_PAGE=Create Or Update Base Class
 WIZARD_PAGE_DTO_FIELD_SELECTION=Edit Dto fields
