--- a/.classpath
+++ b/.classpath
@@ -19,9 +19,9 @@
 	<classpathentry kind="lib" path="template/jars/junit-3.8.2.jar"/>
 	<classpathentry kind="lib" path="template/jars/commons-logging-1.1.jar"/>
 	<classpathentry exported="true" kind="lib" path="template/jars/kuina-dao-1.0.1-rc1.jar" sourcepath="template/jars/sources/kuina-dao-1.0.1-rc1-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="template/jars/s2-extension-2.4.18-rc1.jar" sourcepath="template/jars/sources/s2-extension-2.4.18-rc1-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="template/jars/s2-framework-2.4.18-rc1.jar" sourcepath="template/jars/sources/s2-framework-2.4.18-rc1-sources.jar"/>
-	<classpathentry exported="true" kind="lib" path="template/jars/s2-tiger-2.4.18-rc1.jar" sourcepath="template/jars/sources/s2-tiger-2.4.18-rc1-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="template/jars/s2-extension-2.4.18.jar" sourcepath="template/jars/sources/s2-extension-2.4.18-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="template/jars/s2-framework-2.4.18.jar" sourcepath="template/jars/sources/s2-framework-2.4.18-sources.jar"/>
+	<classpathentry exported="true" kind="lib" path="template/jars/s2-tiger-2.4.18.jar" sourcepath="template/jars/sources/s2-tiger-2.4.18-sources.jar"/>
 	<classpathentry exported="true" kind="lib" path="template/jars/h2-2007-10-03.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5"/>
 	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
