JMS プロジェクトの src/test にも listener パッケージを作成するようにしました．
git-svn-id: https://www.seasar.org/svn/chura/trunk@760 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.projects/plugin.xml
+++ b/dolteng/org.seasar.dolteng.projects/plugin.xml
@@ -508,6 +508,7 @@
 			<entry kind="file" path="${mainResourcePath}/jms-inbound.dicon" />
 			<entry kind="file" path="${testJavaPath}/${packagePath}/Main.java" />
 			<entry path="${mainJavaPath}/${packagePath}/listener" />
+			<entry path="${testJavaPath}/${packagePath}/listener" />
 		</handler>
 		<handler type="classpath">
 			<entry kind="file"
