Entityのpublicフィールド対応
git-svn-id: https://www.seasar.org/svn/chura/trunk/dolteng/org.seasar.dolteng.eclipse.plugin@762 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/build.properties
+++ b/build.properties
@@ -4,8 +4,7 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                plugin_ja.properties,\
                icons/,\
-               template/,\
-               template/jars/h2-2007-10-03.jar
+               template/
 jars.compile.order = dolteng-core.jar
 source.dolteng-core.jar = target/classes/,\
                           src/main/java/,\
