--- a/dolteng/org.seasar.dolteng.eclipse.plugin/build.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/build.properties
@@ -4,8 +4,7 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                plugin_ja.properties,\
                icons/,\
-               template/,\
-               template/jars/h2-2007-10-03.jar
+               template/
 jars.compile.order = dolteng-core.jar
 source.dolteng-core.jar = target/classes/,\
                           src/main/java/,\
