--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -78,7 +78,20 @@ JPA_ASSOCIATION_DIALOG_MAPPEDBY=mappedBy :
 REFRESH=&Refresh...
 LOAD_FROM_PROJECT=Load From Project...
 WIZARD_CHURA_PROJECT_TITLE=Create a Chura Project
+WIZARD_PAGE_CHURA_BASIC_TAB=Basic Settings
+WIZARD_PAGE_CHURA_DETAIL_TAB=Detail Settings
 WIZARD_PAGE_CHURA_ROOT_PACKAGE=Root Package Name :
+WIZARD_PAGE_CHURA_LIB_PATH=Library Path :
+WIZARD_PAGE_CHURA_LIB_SRC_PATH=Library Source Path :
+WIZARD_PAGE_CHURA_TEST_LIB_PATH=Test Library Path :
+WIZARD_PAGE_CHURA_TEST_LIB_SRC_PATH=Test Library Source Path :
+WIZARD_PAGE_CHURA_MAIN_JAVA_PATH=Main Java Source Path :
+WIZARD_PAGE_CHURA_MAIN_RESOURCE_PATH=Main Java Resource Path :
+WIZARD_PAGE_CHURA_MAIN_OUT_PATH=Main Java Output Path :
+WIZARD_PAGE_CHURA_WEBAPP_ROOT=Webapp Root :
+WIZARD_PAGE_CHURA_TEST_JAVA_PATH=Test Java Source Path :
+WIZARD_PAGE_CHURA_TEST_RESOURCE_PATH=Test Java Resource Path :
+WIZARD_PAGE_CHURA_TEST_OUT_PATH=Test Java Output Path:
 WIZARD_PAGE_CHURA_JRE_CONTAINER=JRE Container
 WIZARD_PAGE_CHURA_USE_DEFAULT_JRE=Use Default JRE ({0})
 WIZARD_PAGE_CHURA_TYPE_SELECTION=Project Type :
