--- a/dolteng/org.seasar.dolteng.projects/template/520/pom.xml
+++ b/dolteng/org.seasar.dolteng.projects/template/520/pom.xml
@@ -54,7 +54,7 @@
 						</goals>
 						<configuration>
 							<sources>
-								<source>src/main/webapp/view</source>
+								<source>${webAppRoot}/view</source>
 							</sources>
 						</configuration>
 					</execution>
