XMLの整形にXalan-Java (ASL2.0) のserializerを使用。
git-svn-id: https://www.seasar.org/svn/chura/trunk@794 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.projects/build.properties
+++ b/dolteng/org.seasar.dolteng.projects/build.properties
@@ -3,7 +3,8 @@ bin.includes = META-INF/,\
                dolteng-projects.jar,\
                template/,\
                schema/,\
-               icons/
+               icons/,\
+               lib/serializer.jar
 jars.compile.order = dolteng-projects.jar
 source.dolteng-projects.jar = target/classes/,\
                               src/main/java/
