- projectTypeのdescriptionを出力できるようにした。 - 不要ファイル削除 - 複合プロジェクト生成への布石…
git-svn-id: https://www.seasar.org/svn/chura/trunk@796 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Labels.properties
@@ -95,6 +95,7 @@ WIZARD_PAGE_CHURA_TEST_OUT_PATH=Test Java Output Path:
 WIZARD_PAGE_CHURA_JRE_CONTAINER=JRE Container
 WIZARD_PAGE_CHURA_USE_DEFAULT_JRE=Use Default JRE ({0})
 WIZARD_PAGE_CHURA_TYPE_SELECTION=Project Type :
+WIZARD_PAGE_CHURA_TYPE_DESCRIPTION=Description :
 WIZARD_PAGE_PAGE_FIELD_SELECTION=Edit Page fields
 WIZARD_PAGE_CREATION_DESCRIPTION=Edit Field Modifier, Field Type and Field Name
 WIZARD_PAGE_PAGE_TREE_LABEL=Available Fields ...
