--- a/dolteng/org.seasar.dolteng.projects/plugin.properties
+++ b/dolteng/org.seasar.dolteng.projects/plugin.properties
@@ -15,3 +15,4 @@
 ###############################################################################
 plugin.author=the Seasar Foundation
 plugin.brand=Dolteng Eclipse Plugin
+projectTypeDesc.521=...
