--- a/org.seasar.dolteng.projects/build.properties
+++ b/org.seasar.dolteng.projects/build.properties
@@ -4,7 +4,8 @@ bin.includes = META-INF/,\
                template/,\
                schema/,\
                icons/,\
-               lib/serializer.jar
+               lib/serializer.jar,\
+               lib/velocity-dep-1.4.jar
 jars.compile.order = dolteng-projects.jar
 source.dolteng-projects.jar = target/classes/,\
                               src/main/java/
