--- a/org.seasar.dolteng.projects/plugin.properties
+++ b/org.seasar.dolteng.projects/plugin.properties
@@ -15,4 +15,17 @@
 ###############################################################################
 plugin.author=the Seasar Foundation
 plugin.brand=Dolteng Eclipse Plugin
-projectTypeDesc.521=...
+
+projectTypeDesc.Teeda=JSF implementation and extension based on DI and AOP.
+projectTypeDesc.SAStruts=framework to develop Super Agile with Struts and Seasar2
+projectTypeDesc.S2Flex2=Library to use S2Container components from Flash Player Flex.
+projectTypeDesc.S2Wicket=Library to use S2Container components from Wicket.
+
+projectTypeDesc.S2Dao=O/R mapping framework without using XML to map definitions.
+projectTypeDesc.Kuina=JPA (Java Persistence API) framework.
+
+projectTypeDesc.Sysdeo=Sysdeo Tomucat Plugin
+projectTypeDesc.WTP=WTP
+
+projectTypeDesc.S2JMSo=Framework to bind a S2Container component with asynchronous message based on JMS (Java Message Service).
+projectTypeDesc.S2JMSio=Framework to bind a S2Container component with asynchronous message based on JMS (Java Message Service).
